bootstrap: add postgres resource for router
Signed-off-by: Blake Gentry <blakesgentry@gmail.com>

--- a/bootstrap/manifest_template.json
+++ b/bootstrap/manifest_template.json
@@ -178,7 +178,8 @@
     },
     "processes": {
       "app": 1
-    }
+    },
+    "resources": [{"name":"postgres", "url":"http://pg-api.discoverd/databases"}]
   },
   {
     "id": "gitreceive-key",
